--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@ body {
     overflow: hidden;
     background-color: #f7f7f7;
 }
-
 .game-container {
     position: relative;
     width: 100%;
     height: 150px;
-    background-color: #fff;
+    background-image: url('https://raw.githubusercontent.com/aninew/my_game/main/2.png');
+    background-size: cover; 
     border: 2px solid #000;
 }
 
