--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,11 @@ body {
     position: absolute;
     bottom: 0;
     left: 50px;
-    width: 30px;
-    height: 30px;
-    background-color: #333;
+    width: 30px; 
+    height: 30px; 
+    background-image: url('https://raw.githubusercontent.com/aninew/my_game/refs/heads/main/WhatsApp%20Image%202025-01-07%20at%2022.04.25_7f4fa31e.jpg'); 
+    background-size: contain; 
+    background-repeat: no-repeat;
 }
 
 .cactus {
